# h15_apps

./: README.md
gst_in_cpp_api/: CMakeLists.txt  camera_streaming_detection.cpp  camera_streaming_detection.sh  recive_pipeline.sh
gst_in_cpp_api/resources/configs/: vision_config_VHT.json  vision_config_VHT.json~
